# ibkrpy

./: .gitignore  README.md  config.yaml.sample  env.sample  pyproject.toml
ibkrpy/core/: main.py  system_daemon.py  trading_dashboard.py
ibkrpy/data/: __init__.py  data_pipeline.py  external_data.py  ibkr_data_manager.py
ibkrpy/evaluation/: __init__.py  backtest_engine.py  model_tuner.py
ibkrpy/manager/: model_orchestrator.py  pipeline_manager.py  trading_engine.py
ibkrpy/models/: __init__.py  arima.py  garch.py  hmm.py  lstm.py  transformer.py
ibkrpy/shared/: __init__.py  config_manager.py  db_manager.py  system_log.py
ibkrpy/strategy/: __init__.py  core_strategy.py  market_analyzer.py  strategy_components.py
ibkrpy/ui/: __init__.py  trading_dashboard.py
